# kbm-ledsas-sdk

./: .gitattributes  .gitignore  .gitleaks.toml  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  COMPATIBILITY.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.txt  UPGRADING.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  dco.yml  release.yml  secret-scan.yml
docs/: SDK_API_REFERENCE.md
examples/hello_world_service/: .env.example  Dockerfile  README.md  conftest.py  main.py  requirements.txt
examples/hello_world_service/deploy/local/: docker-compose.yml
examples/hello_world_service/scripts/: send_hello.py
examples/hello_world_service/tests/: test_hello_world.py
src/kbm_ledsas_sdk/: __init__.py  app.py
src/kbm_ledsas_sdk/amqp/: consumer.py  publisher.py  topology.py
src/kbm_ledsas_sdk/blob/: __init__.py  azure_client.py  direct_operations.py  operations.py
src/kbm_ledsas_sdk/health/: __init__.py  checks.py  server.py
src/kbm_ledsas_sdk/models/: __init__.py  blob.py  envelope.py  errors.py  messages.py
src/kbm_ledsas_sdk/runtime/: __init__.py  config.py  context.py  env_vars.py  handler.py  security.py
src/kbm_ledsas_sdk/transport/: __init__.py  _build_direct.py  base.py  direct.py  factory.py  mock.py
src/kbm_ledsas_sdk/utils/: __init__.py  logging.py  tracing.py
tests/: conftest.py
tests/integration/: __init__.py  test_reply_unroutable_live.py
tests/unit/: test_app.py  test_blob_operations.py  test_boundary_regressions.py  test_config.py  test_config_security_regressions.py  test_consumer.py  test_context.py  test_env_var_drift.py  test_generic_errors.py  test_handler.py  test_health.py  test_logging.py  test_models.py  test_reply_publish_regressions.py  test_retry.py  test_timeout.py  test_tracing.py  test_transport.py  test_validation_regressions.py
